# ACG_RayTracing

./: .gitignore  CMakeLists.txt  README.md
.github/: ACTIONS_README.md
.github/workflows/: render.yml
src/: main.cpp
src/cameras/: perspective.cpp
src/core/: bitmap.cpp  bitmap.h  film.cpp  film.h  hemisphericalsampler.cpp  hemisphericalsampler.h  matrix4x4.cpp  ray.cpp  ray.h  scene.cpp  scene.h  tinyexr.h  utils.cpp  utils.h  vector3d.cpp  vector3d.h
src/lightsources/: arealightsource.cpp  arealightsource.h  lightsource.h  pointlightsource.h
src/materials/: emissive.cpp  emissive.h  material.cpp  material.h  mirror.cpp  mirror.h  phong.cpp  phong.h  transmissive.cpp  transmissive.h
src/shaders/: ambientocclusionintegrator.cpp  ambientocclusionintegrator.h  areadirectintegrator.cpp  areadirectintegrator.h  constantambientintegrator.cpp  constantambientintegrator.h  depthshader.cpp  depthshader.h  hemisfericaldirectintegrator.cpp  hemisfericaldirectintegrator.h  intersectionshader.cpp  nexteventestimatorintegration.cpp  nexteventestimatorintegration.h  nexteventestimatorintegrationextended.cpp  nexteventestimatorintegrationextended.h  normalshader.cpp  normalshader.h  purepathtracingintegrator.cpp  purepathtracingintegrator.h  shader.h  whittedintegrator.cpp  whittedintegrator.h
src/shapes/: shape.h  square.cpp  square.h
